# HNS

./:  - 副本.config  .config.example  .gitignore  CLAUDE.md  HNS.rar  README.md  agent.py  agent.spec  download_cantonese_songs.py  netease_cantonese_top20.py  requirements.txt  swarm_agent.py  ymodem_gui.py
.claude/: settings.local.json
skills/analyze_compile/: handler.py
skills/image_analysis/: SPEC.md
ymodem_sender/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  ymodem.cpp  ymodem.h
ymodem_sender_rust/: Cargo.toml  build_and_run.bat
ymodem_sender_rust/.claude/: settings.local.json
ymodem_sender_rust/src/: main.rs  ymodem.rs
